# contacts_rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  setup.rs
src/lib/: error.rs  mod.rs  repository.rs
src/models/: contact.rs
src/routes/: contacts.rs
src/services/: contact_service.rs  mod.rs
