[package]
name = "contacts_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.15.0"
thiserror = "1.0.37"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]
